Add Article.author
